// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmailSearch renders correctly 1`] = `
<Grid>
  <Grid.Column
    md={12}
    xs={12}
  >
    <Box
      mb={
        Array [
          "300",
          null,
          null,
          "0",
        ]
      }
    >
      <label
        className="ScreenReaderOnly"
        htmlFor="email"
      >
        Recipient Email
      </label>
      <Field
        component={[Function]}
        name="email"
        onBlur={[Function]}
        onKeyDown={[Function]}
        placeholder="Recipient Email"
        title="Email"
        validate={
          Array [
            [MockFunction],
            [MockFunction],
          ]
        }
      />
    </Box>
  </Grid.Column>
</Grid>
`;

exports[`EmailSearch renders correctly with subaccounts 1`] = `
<Grid>
  <Grid.Column
    md={6}
    xs={12}
  >
    <Box
      mb={
        Array [
          "300",
          null,
          null,
          "0",
        ]
      }
    >
      <label
        className="ScreenReaderOnly"
        htmlFor="email"
      >
        Recipient Email
      </label>
      <Field
        component={[Function]}
        name="email"
        onBlur={[Function]}
        onKeyDown={[Function]}
        placeholder="Recipient Email"
        title="Email"
        validate={
          Array [
            [MockFunction],
            [MockFunction],
          ]
        }
      />
    </Box>
  </Grid.Column>
  <Grid.Column
    md={6}
    xs={12}
  >
    <Box>
      <label
        className="ScreenReaderOnly"
        htmlFor="subaccount"
      >
        Subaccount
      </label>
      <Field
        component={[Function]}
        label=""
        name="subaccount"
        onChange={[Function]}
        placeholder="Subaccount"
      />
    </Box>
  </Grid.Column>
</Grid>
`;
